voicevox_core/c_api/include/voicevox_core.h

typedef int32_t VoicevoxAccelerationMode;
typedef int32_t VoicevoxResultCode;
/**
 * テキスト解析器としてのOpen JTalk。
 *
 * <b>構築</b>(_construction_)は ::voicevox_open_jtalk_rc_new で行い、<b>破棄</b>(_destruction_)は ::voicevox_open_jtalk_rc_delete で行う。
 *
 * 参照カウント方式のスマートポインタ(reference-counted smart pointer)であり、
 * ::voicevox_synthesizer_new に渡されるときには参照カウンタがインクリメントされる形でオブジェクトの共有が行われる。
 *
 * \example{
 * ```c
 * OpenJtalkRc *open_jtalk;
 * voicevox_open_jtalk_rc_new("./open_jtalk_dic_utf_8-1.11", &open_jtalk);
 * // ⋮
 * voicevox_open_jtalk_rc_delete(open_jtalk);
 * ```
 * }
 *
 * \orig-impl{OpenJtalkRc}
 */
typedef struct OpenJtalkRc OpenJtalkRc;
/**
 * ONNX Runtime。
 *
 * シングルトンであり、インスタンスは高々一つ。
 *
 * ```c
 * const VoicevoxOnnxruntime *ort1;
 * voicevox_onnxruntime_load_once(
 *     voicevox_make_default_load_onnxruntime_options(), &ort1);
 * const VoicevoxOnnxruntime *ort2 = voicevox_onnxruntime_get();
 * assert(ort1 == ort2);
 * ```
 *
 * \orig-impl{VoicevoxOnnxruntime}
 */
typedef struct VoicevoxOnnxruntime VoicevoxOnnxruntime;
/**
 * 音声シンセサイザ。
 *
 * <b>構築</b>(_construction_)は ::voicevox_synthesizer_new で行い、<b>破棄</b>(_destruction_)は ::voicevox_synthesizer_delete で行う。
 *
 * \orig-impl{VoicevoxSynthesizer}
 */
typedef struct VoicevoxSynthesizer VoicevoxSynthesizer;
/**
 * 音声モデルファイル。
 *
 * VVMファイルと対応する。
 * <b>構築</b>(_construction_)は ::voicevox_voice_model_file_open で行い、<b>破棄</b>(_destruction_)は ::voicevox_voice_model_file_delete で行う。
 *
 * \orig-impl{VoicevoxVoiceModelFile}
 */
typedef struct VoicevoxVoiceModelFile VoicevoxVoiceModelFile;
/**
 * ::voicevox_onnxruntime_load_once のオプション。
 *
 * \availability{
 *   [リリース](https://github.com/voicevox/voicevox_core/releases)されているライブラリではiOSを除くプラットフォームで利用可能。詳細は<a href="#voicevox-core-availability">ファイルレベルの"Availability"の節</a>を参照。
 * }
 *
 * \no-orig-impl{VoicevoxLoadOnnxruntimeOptions}
 */
typedef struct VoicevoxLoadOnnxruntimeOptions {
  /**
   * ONNX Runtimeのファイル名（モジュール名）もしくはファイルパスを指定する。
   *
   * `dlopen`/[`LoadLibraryExW`](https://learn.microsoft.com/en-us/windows/win32/api/libloaderapi/nf-libloaderapi-loadlibraryexw)の引数に使われる。デフォルトは ::voicevox_get_onnxruntime_lib_versioned_filename と同じ。
   */
  const char *filename;
} VoicevoxLoadOnnxruntimeOptions;
/**
 * ::voicevox_synthesizer_new のオプション。
 *
 * \no-orig-impl{VoicevoxInitializeOptions}
 */
typedef struct VoicevoxInitializeOptions {
  /**
   * ハードウェアアクセラレーションモード
   */
  VoicevoxAccelerationMode acceleration_mode;
  /**
   * CPU利用数を指定
   * 0を指定すると環境に合わせたCPUが利用される
   */
  uint16_t cpu_num_threads;
} VoicevoxInitializeOptions;
/**
 * 音声モデルID。
 *
 * \orig-impl{VoicevoxVoiceModelId}
 */
typedef const uint8_t (*VoicevoxVoiceModelId)[16];
/**
 * スタイルID。
 *
 * VOICEVOXにおける、ある<i>キャラクター</i>のある<i>スタイル</i>を指す。
 *
 * \orig-impl{VoicevoxStyleId}
 */
typedef uint32_t VoicevoxStyleId;
/**
 * ::voicevox_synthesizer_synthesis のオプション。
 *
 * \no-orig-impl{VoicevoxSynthesisOptions}
 */
typedef struct VoicevoxSynthesisOptions {
  /**
   * 疑問文の調整を有効にする
   */
  bool enable_interrogative_upspeak;
} VoicevoxSynthesisOptions;
/**
 * ::voicevox_synthesizer_tts のオプション。
 *
 * \no-orig-impl{VoicevoxTtsOptions}
 */
typedef struct VoicevoxTtsOptions {
  /**
   * 疑問文の調整を有効にする
   */
  bool enable_interrogative_upspeak;
} VoicevoxTtsOptions;
struct VoicevoxLoadOnnxruntimeOptions voicevox_make_default_load_onnxruntime_options(void);
VoicevoxResultCode voicevox_onnxruntime_load_once(struct VoicevoxLoadOnnxruntimeOptions options,
                                                  const struct VoicevoxOnnxruntime **out_onnxruntime);
VoicevoxResultCode voicevox_open_jtalk_rc_new(const char *open_jtalk_dic_dir,
                                              struct OpenJtalkRc **out_open_jtalk);
void voicevox_open_jtalk_rc_delete(struct OpenJtalkRc *open_jtalk);
VoicevoxResultCode voicevox_voice_model_file_open(const char *path,
                                                  struct VoicevoxVoiceModelFile **out_model);
void voicevox_voice_model_file_delete(struct VoicevoxVoiceModelFile *model);
VoicevoxResultCode voicevox_synthesizer_new(const struct VoicevoxOnnxruntime *onnxruntime,
                                            const struct OpenJtalkRc *open_jtalk,
                                            struct VoicevoxInitializeOptions options,
                                            struct VoicevoxSynthesizer **out_synthesizer);
void voicevox_synthesizer_delete(struct VoicevoxSynthesizer *synthesizer);
VoicevoxResultCode voicevox_synthesizer_load_voice_model(const struct VoicevoxSynthesizer *synthesizer,
                                                         const struct VoicevoxVoiceModelFile *model);
char *voicevox_synthesizer_create_metas_json(const struct VoicevoxSynthesizer *synthesizer);
struct VoicevoxTtsOptions voicevox_make_default_tts_options(void);
VoicevoxResultCode voicevox_synthesizer_tts(const struct VoicevoxSynthesizer *synthesizer,
                                            const char *text,
                                            VoicevoxStyleId style_id,
                                            struct VoicevoxTtsOptions options,
                                            uintptr_t *output_wav_length,
                                            uint8_t **output_wav);
void voicevox_json_free(char *json);
void voicevox_wav_free(uint8_t *wav);